--- a/css/style3.css
+++ b/css/style3.css
@@ -72,15 +72,20 @@ span {
 
 .category-tag {
   font-family: 'Indie Flower', cursive;
-  left: 100px;
+  color: #C71585;
+  margin-left: 250px;
+
+
 }
 .title {
-  left: 100px;
+  color: #808080;
+  margin-left: 250px;
 }
 
 /*top.news*/
 .news {
   position: relative;
+  padding-top: 100px;
 }
 .news p {
 
@@ -160,33 +165,54 @@ span {
 /*top.service*/
 .service {
   width: 100%;
-
+  position: relative;
 }
+
 
 .servis-card {
   display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  width: 100%;
+  grid-template-rows: 200px 200px;
+  grid-template-columns: 400px 400px;
+
+
 }
 /*service画像*/
-.card-img-1 {
+.card-img-1 img {
+  width: 40%;
+  padding: 20px 0 20px;
+}
+.card-img-2 img {
+  width:  40%;
+  padding: 20px 0 20px;
+}
+.card-img-3 img  {
+  width:  40%;
+  padding: 20px 0 20px;
+
+}
+.card-img-1  {
   background: #C71585;
-  grid-column: 1/3;
-  grid-row: 2/3;
-
-
+  grid-column: 1/2;
+  grid-row: 1/3;
+  text-align: center;
+  
 }
 .card-img-2 {
   background: #FF69B4;
   grid-column: 2/3;
   grid-row: 1/2;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
 
 }
 .card-img-3 {
  background: #DB7093;
  grid-column: 2/3;
- grid-row: 1/2;
+ grid-row: 2/3;
+ display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
 
 }
 
@@ -195,21 +221,24 @@ span {
 }
 /*教育事業*/
 .card-cat {
-
+color: #fff;
+font-weight: bold;
 }
 /*サンプルテキストがここに入ります*/
 .card-content {
+  color: #fff;
+  font-size: 14px;
+  
+  
+
 
 }
 
 .servis-card {
 
 }
-.card-img {
 
-}
 .card-content {
-  position: absolute;
 
 }
 .card-cat {
@@ -221,21 +250,10 @@ span {
 .card-content {
 
 }
-      
-.servis-card {
-  
-}
-.card-img {
-
-}
-  
 .card-content {
 
 }
 .card-cat {
-
-}
-.card-content {
 
 }
 /*end.servis*/
@@ -308,6 +326,8 @@ span {
 
 .company {
   width: 100%;
+  display: flex;
+  justify-content: center;
 
 }
 .table {
@@ -322,30 +342,55 @@ span {
 .table th {
   font-weight: bold;
   background-color: #dedede;
-  text-align: center;
+  text-align: left;
 }
 /*end.company*/
 
-.mv{
+.ful {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  margin-top: 100px;
+}
+.mv {
   background: url(../img/recruit.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: left;
-  min-height: 100vh;
+  min-height: 300px;
   width: 100vh;
 }
-.mv-2{
+.mv-2 {
   background: url(../img/interview.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: right;
-  min-height: 100vh;
+  min-height: 300px;
   width: 100vh;
 }
-.title-1{
+.title-1 {
+  font-size: 30px;
+  color: #fff;
+  position: absolute;
+  top: 120px;
+  left: 200px;
+
   
 }
-p {
+.title-2 {
+  font-size: 30px;
+  color: #fff;
+  position: absolute;
+  top: 120px;
+  right: 200px;
+
+
+}
+
+.text {
+  padding-top: 100px;
+  text-align: center;
 
 }
   
