--- a/css/style3.css
+++ b/css/style3.css
@@ -164,170 +164,158 @@ span {
 
 /*top.service*/
 .service {
-  width: 100%;
-  position: relative;
+  width: 80%;
+  margin: 0 auto;
 }
-
-
 .servis-card {
   display: grid;
   grid-template-rows: 200px 200px;
-  grid-template-columns: 400px 400px;
-
-
+  grid-template-columns: 1fr 1fr;
 }
 /*service画像*/
 .card-img-1 img {
-  width: 40%;
-  padding: 20px 0 20px;
+  width: 30%;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  position: relative;
 }
 .card-img-2 img {
-  width:  40%;
-  padding: 20px 0 20px;
+  width:  30%;
+  padding: 10px;
+  position: relative;
+  
 }
 .card-img-3 img  {
-  width:  40%;
-  padding: 20px 0 20px;
+  width:  30%;
+  padding: 10px;
+  position: relative;
 
 }
 .card-img-1  {
   background: #C71585;
   grid-column: 1/2;
   grid-row: 1/3;
+  padding: 20px;
   text-align: center;
-  
 }
 .card-img-2 {
   background: #FF69B4;
   grid-column: 2/3;
   grid-row: 1/2;
-  display: flex;
-  justify-content: space-between;
   padding: 20px;
 
 }
 .card-img-3 {
- background: #DB7093;
- grid-column: 2/3;
- grid-row: 2/3;
- display: flex;
-  justify-content: space-between;
-  padding-top: 20px;
-
+  background: #DB7093;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  padding: 20px;
 }
 
 .card-content {
-
+width: 100%;
 }
 /*教育事業*/
 .card-cat {
 color: #fff;
 font-weight: bold;
+text-align: center;
 }
+.card-cat:nth-child(2) {
+}
+
 /*サンプルテキストがここに入ります*/
 .card-content {
   color: #fff;
   font-size: 14px;
-  
-  
-
-
-}
-
-.servis-card {
-
-}
-
-.card-content {
-
-}
-.card-cat {
-
-}
-.card-cat-1 {
-  padding: 30px
-}
-.card-content {
-
-}
-.card-content {
-
-}
-.card-cat {
-
 }
 /*end.servis*/
 
+
 /*top.blog*/
 .blog {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
   background: #F5F5F5;
+  height: 600px;
+  padding: 30px 0;
+
+  
 
 }
 .blog-card {
-  width: 30%;
+  width: 300px;
+  margin: 0 auto;
+  display: inline-block;
+  background: #dedede;
   
+
 }
 /*ブログ画像*/
 .blog-img img {
   width: 100%;
+  border-radius: 20px 20px 0 0;
+
+  
 }
 /*親要素*/
 .blog-content {
-  background: #ddd;
-
-
+  background: #fff;
+  border-radius: 0 0 20px 20px;
+  padding: 15px;
 }
 /*blogラベル*/
 .blog-card-cat {
-  background: pink;
-
+  font-size: 18px;
+  padding: 5px 10px;
+  margin: 0px;
+  color: #fff;
+  background: #C71585;
+  width: 50px;
+  border-radius: 20px 0 0 0;
 }
 /*文章ープログラミング学習の~*/
 .blog-card-ttl {
   font-size: 20px;
-
 }
 .tag {
+  font-size: 14px;
+  text-align: center;
+  display: inline-flex;
 
 }
 /*2021/01/01*/
 .card-date {
+  padding-right: 20px;
+  color: #808080;
 
 }
 /*COACHTECH*/
 .card-tag {
+  padding-left: 50px;
+  color: #808080;
 
 }
-.blog-card {
-
-}
-.blog-img {
-
-}
-
-.blog-content {
-
-}
-.blog-card-cat{
-
-}
-.blog-card-ttl {
-
-}
-
-
-
+/*一覧ページへ*/
 .form-btn {
-
+  color: #C71585;
+  border-color: #C71585;
+  background: #fff;
+  width: 200px;
+  height: 60px;
+  border-radius: 30px;
+  display: block;
+  margin: 30px 0;
+  font-size: 18px;
+  
+  
 }
 
 .company {
   width: 100%;
   display: flex;
   justify-content: center;
+  padding: 10px 0;
+  text-align: center;
+  display: block;
 
 }
 .table {
@@ -369,23 +357,21 @@ font-weight: bold;
   min-height: 300px;
   width: 100vh;
 }
+/*採用情報*/
 .title-1 {
   font-size: 30px;
   color: #fff;
   position: absolute;
   top: 120px;
   left: 200px;
-
-  
 }
+/*社員インタビュー*/
 .title-2 {
   font-size: 30px;
   color: #fff;
   position: absolute;
   top: 120px;
   right: 200px;
-
-
 }
 
 .text {
@@ -393,8 +379,4 @@ font-weight: bold;
   text-align: center;
 
 }
-  
-input type="submit" class="form-btn" value="お問い合わせ" />
- 
-
 
