--- a/css/style3.css
+++ b/css/style3.css
@@ -435,4 +435,15 @@ text-align: center;
   overflow: hidden;
 }
 
+.last {
+  margin-top: 100px;
+  background: #F5F5F5;;
+  width: 100%;
+  height: 30px;
+  text-align: center;
+  padding: 20px;
 
+}
+small {
+  color: #808080;
+}
